# purdy

./: .gitignore  .py_vir_env  .readthedocs.yaml  CHANGES.rst  CT_read.txt  LICENSE  README.md  README.rst  clean_build.sh  detextual.sh  flakes.sh  load_tests.py  purdy  purdy.py  pyflakes.sh  pyproject.toml  requirements.txt  rtd_req.txt  runtests.sh  setup.py  tox.ini
docs/: Makefile  conf.py  implementation.rst  index.rst  library.rst  modules.rst  prog.rst  programs.rst  requirements.txt  samples.rst
experiment/: allscroll.py  allscroll.tcss  back.py  codecon.py  con.py  forms.py  g.py  g.tcss  h.py  h.tcss  m.py  readbox.py  screen.py  tui.py  vscroll.py  zanim.py
extras/: README.txt
extras/display_code/: base.html  code.py  console.py  console.repl  console2.py  curl.bash  docstring.py  dollar.bash  doubles.py  hell.yml  html_console.html  long.py  long_con.repl  mls.py  mls.repl  movie.rst  node.njs  sample.repl  short.py  short.repl  simple.repl  strings.py  t.html  t.rtf  traceback.repl  ugly.js
extras/old/: show.py
extras/samples/: all_console.py  all_console_builder.py  append.py  append_builder.py  bash_console.py  bash_console_builder.py  basic_console.py  box.py  builder.py  chain_hilite.py  chain_hilite_builder.py  code_api.py  cols.py  cols_builder.py  compact.py  compact_builder.py  custom_lexer.py  custom_lexer_builder.py  dbash.py  demo.py  docstring.py  docstring_builder.py  exec.py  exec_builder.py  features.py  fold.py  fold_builder.py  fun.py  fun_builder.py  highlight.py  highlight_builder.py  hope.py  html_pal.py  html_pal_builder.py  insert.py  insert_builder.py  lines.py  lines_builder.py  maxheight.py  maxheight_builder.py  (+37 more)
extras/tools/: bash_tokens.py  cells.py  colours.py  curses_purdy.py  focus_scroll.py  highlight.py  html_tokens.py  keypress.py  md_tokens.py  node_tokens.py  print.py  rst_tokens.py  rtfenc.py  show_tokens.py  tran_colour.py  two56.py  yaml_tokens.py
purdy/: actions.py  builder.py  cmd.py  colour.py  conf.py  content.py  lexers.py  parser.py  pat  prat  purdy  scribe.py  settings.py  subpurdy  ui.py  widgets.py
purdy/animation/: cell.py  manager.py  steps.py
purdy/colour/: __init__.py  ansico.py  base.py  htmlco.py  plainco.py  rtfco.py  urwidco.py
purdy/iscreen/exercise/: iscreen.py
purdy/iscreen/matics/: iscreen.py  readbox.py
purdy/iscreen/tui/: iscreen.py  widgets.py
purdy/iscreen/virtual/: iscreen.py
purdy/tui/: iscreen.py  readbox.py  screen.py
requirements/: dev.txt  docs.txt  local.txt  prod.txt
samples/: console.py  decorator.py  simple.py
src/purdy/: _debug.py  content.py  filters.py  lexers.py  motif.py  parser.py  renderers.py  scribe.py  style.py  themes.py  typewriter.py  utils.py
src/purdy/cmdline/: pat.py  prat.py  purdy.py  subpurdy.py  utils.py
src/purdy/cmds/: arg_helpers.py  purdy.py  subpurdy.py
src/purdy/content/: base.py  plain.py
src/purdy/export/: ansi.py  html.py  rtf.py  text.py
src/purdy/renderers/: formatter.py  html.py  html_xfrm.py  plain.py  rich.py  rich_xfrm.py  rtf.py  textual.py  utils.py
src/purdy/themes/: ansi.py  html.py  rtf.py  tui.py  utils.py
src/purdy/tui/: __init__.py  actions.py  animate.py  animation.py  apps.py  codebox.py  glayout.py  h.py  listing_box.py  purdy_app.tcss  purdybox.py  sc_effects.py  screen.py  steps.py  style.tcss  tui_content.py  typewriter.py  widgets.py
tests/: base.py  capture_exercise.py  capture_sample.py  gen_compare.py  generate_captures.sh  generate_exercises.sh  prich.py  print_compare.py  shared.py  test_actions.py  test_builder.py  test_cmds.py  test_content.py  test_exercises.py  test_export.py  test_filters.py  test_formatter.py  test_motif.py  test_parser.py  test_renderers.py  test_rtf.py  test_samples.py  test_scribe.py  test_style.py  test_themes.py  test_typewriter.py  test_utils.py  utils.py
tests/compare/: html.out  rich.out  rtf.out
tests/data/: cats.py  code.py  curl.con  doubles.txt  flush.txt  nonewline.py  print_ansi.out  print_html_full.out  print_html_snippet.out  print_rtf_bg.out  print_rtf_nobg.out  print_tokens_ansi.out  print_tokens_bw.out  simple.py  withnewline.py  wrap.py
tests/exercise_data/: all_console.json  append.json  bash_console.json  builder.json  cols.json  compact.json  dbash.json  docstring.json  exec.json  fold.json  highlight.json  insert.json  lines.json  mixed.json  mls_type.json  movie_console.json  newline.json  node.json  pause.json  prompt.json  remove.json  replace.json  section.json  sleep.json  split_long.json  src_change.json  subset.json  swipe.json  tall.json  triple.json  type_console.json  wrap.json
tests/samples_data/: all_console.json  append.json  bash_console.json  cols.json  docstring.json  exec.json  fold.json  highlight.json  insert.json  lines.json  mixed.json  mls_type.json  movie_console.json  remove.json  replace.json  sleep.json  split_long.json  swipe.json  triple.json
tools/: curses_purdy.py
