[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purdy"
description = "Terminal-based code colourization and slide-show tool and library"
authors = [{name='Christopher Trudeau', email='ctrudeau+pypi@arsensa.com'}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
#        'Development Status :: 4 - Beta',
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Education',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Topic :: Multimedia :: Graphics :: Presentation',
        'Topic :: Software Development :: Libraries :: Python Modules',
]
dynamic = ["version"]
dependencies = [
    "asciimatics==1.14.0",
    "asttokens==2.2.1",
    "colored==1.4.4",
    "Pygments==2.15.1",
]
requires-python = ">=3.7"

[project.optional-dependencies]
build = ["build==0.10.0", "twine==4.0.2"]
dev = [
    'coverage==7.2.7',
    'pudb==2022.1.3',
    'pyflakes==3.0.1',
    'Sphinx==6.2.1',
    'sphinx-argparse==0.4.0',
    'sphinx-rtd-theme==1.2.1',
    'tox==4.6.0',
    'waelstow==0.11.0',
]

    [project.scripts]
    pat = "purdy.cmdline.pat:main"
    prat = "purdy.cmdline.prat:main"
    purdy = "purdy.cmdline.purdy:main"
    subpurdy = "purdy.cmdline.subpurdy:main"

[tool.setuptools.dynamic]
version = {attr = "purdy.__version__"}

[project.urls]
repository = 'https://github.com/cltrudeau/purdy'
documentation = 'https://purdy.readthedocs.io/en/latest/index.html'
